[package]
name = "bravery_router"
version = "0.1.0"
authors = ["Tommaso Allevi <tomallevi@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"
log = "0.4"
env_logger = "0.6"
lazy_static = "1"

[dev-dependencies]
bencher = "0.1.5"
route-recognizer = "0.*"

[[example]]
name = "basic"
test = true

[[bench]]
name = "static"
harness = false

[[bench]]
name = "regex"
harness = false

[[bench]]
name = "wildcard"
harness = false
